# CppPotpourri

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  component.mk  keywords.txt  library.properties
.github/workflows/: test-cov-doc.yml
DataStructures/: LightLinkedList.h  PriorityQueue.h  Vector3.h
StringBuilder/: LICENSE  StringBuilder.cpp  StringBuilder.h  keywords.txt  library.properties
UnitTests/: StringBuilderTest.cpp
extras/doc/: BusQueue.md  C3PValue.md  CONTRIB.md  DEV_NOTES.md  ElementPool.md  GPSWrapper.md  Image.md  KeyValuePair.md  LightLinkedList.md  Makefile  ParsingConsole.md  PriorityQueue.md  SensorFilter.md  StateMachine.md  StopWatch.md  Storage.md  StringBuilder.md  TripleAxisPipe.md  Vector3.md
extras/unit_tests/: AllTests.cpp  AsyncSequencerTests.cpp  Base64CoDecTests.cpp  BufferAccepterTests.cpp  C3PUnitTesting.h  EnumWrapperTests.cpp  FSMTests.cpp  GlueTests.cpp  IdentityTest.cpp  ImageTests.cpp  KVPTests.cpp  LineTermCoDecTests.cpp  LinkedListTests.cpp  M2MLinkTests.cpp  Makefile  ManuvrLinkTests.cpp  MultiStringSearchTests.cpp  ParsingConsoleTest.cpp  PlatformAssurances.cpp  PriorityQueueTest.cpp  RingBufferTests.cpp  SchedulerTests.cpp  SensorFilterTests.cpp  StringBuilderTest.cpp  TestDataStructures.cpp  TimerUtilityTests.cpp  Vector3Tests.cpp
scripts/: downloadDeps.sh
scripts/esp-idf/: CMakeLists.txt
src/: AbstractPlatform.cpp  AbstractPlatform.h  AsyncSequencer.cpp  AsyncSequencer.h  Battery.cpp  Battery.h  BufferShuttle.cpp  BufferShuttle.h  BusQueue.cpp  BusQueue.h  C3PBitfield.h  C3PLogger.h  C3PNumericPlane.h  C3PNumericVolume.h  C3PStack.h  C3PStatBlock.h  C3PValue.cpp  C3PValue.h  CppPotpourri.cpp  CppPotpourri.h  DAGs.h  ElementPool.h  EnumWrapper.h  EnumeratedTypeCodes.cpp  EnumeratedTypeCodes.h  FiniteStateMachine.h  FlagContainer.h  GPSWrapper.cpp  GPSWrapper.h  I2CAdapter.cpp  I2CAdapter.h  I2CBusOp.cpp  I2CDevice.cpp  KeyValuePair.cpp  KeyValuePair.h  LightLinkedList.h  Logger.h  MultiStringSearch.cpp  MultiStringSearch.h  ParsingConsole.cpp  (+30 more)
src/BufferAccepter/: BufferAccepter.cpp  BufferAccepter.h  README.md
src/BusQueue/: BusQueue.cpp  BusQueue.h  C3PDriverPatterns.h  I2CAdapter.cpp  I2CAdapter.h  I2CBusOp.cpp  I2CDevice.cpp  SPIAdapter.cpp  SPIAdapter.h  SPIBusOp.cpp  UARTAdapter.cpp  UARTAdapter.h
src/C3PEvents/: C3PEvents.h  C3PScheduler.cpp  C3PScheduler.h
src/C3PRandom/: C3PRandom.cpp  C3PRandom.h  PerlinNoise.cpp
src/C3PValue/: C3PType.cpp  C3PType.h  C3PValue.cpp  C3PValue.h  KeyValuePair.cpp  KeyValuePair.h  README.md
src/CoDecs/: CoDec.h  CoDecTestFixtures.cpp  CoDecTestFixtures.h  LineEndingCoDec.cpp
src/Console/: C3PConsole.cpp  C3PConsole.h  ParsingConsole.cpp
src/CryptoBurrito/: CryptOptUnifier.h  CryptoBurrito.h  CryptoBurritoUtils.cpp  Cryptographic.cpp  Cryptographic.h  README.md
src/GfxUI/: GfxUI.cpp  (+2 more)
(+181 files in other folders)
